core/testing/snapshots/misc/migration.snap
### TITLE ###
Migration_V07_ForLoopIndex_ShowsHelpfulError
### INPUT ###

for idx, item in [1, 2, 3]:
	print(idx, item)
### STDERR ###
error[RAD20033]: Cannot unpack "int" into 2 values
  --> <script>:2:18
  |
1 |
2 | for idx, item in [1, 2, 3]:
  |                  ^^^^^^^^^
3 | 	print(idx, item)
  |
   = help: The for-loop syntax changed. Use: for item in items with loop: print(loop.idx, item). See: https://amterp.dev/rad/migrations/v0.7/
   = info: rad explain RAD20033


### EXIT ###
1
### TITLE ###
Migration_V07_ForLoopIndex_ThreeVars_ShowsHelpfulError
### INPUT ###

for idx, item, extra in [1, 2, 3]:
	print(idx, item, extra)
### STDERR ###
error[RAD20033]: Cannot unpack "int" into 3 values
  --> <script>:2:25
  |
1 |
2 | for idx, item, extra in [1, 2, 3]:
  |                         ^^^^^^^^^
3 | 	print(idx, item, extra)
  |
   = help: The for-loop syntax changed. Use: for item in items with loop: print(loop.idx, item). See: https://amterp.dev/rad/migrations/v0.7/
   = info: rad explain RAD20033


### EXIT ###
1
### TITLE ###
Migration_V07_ForLoopIndex_Underscore_ShowsHelpfulError
### INPUT ###

for _, item in [1, 2, 3]:
	print(item)
### STDERR ###
error[RAD20033]: Cannot unpack "int" into 2 values
  --> <script>:2:16
  |
1 |
2 | for _, item in [1, 2, 3]:
  |                ^^^^^^^^^
3 | 	print(item)
  |
   = help: The for-loop syntax changed. Use: for item in items with loop: print(loop.idx, item). See: https://amterp.dev/rad/migrations/v0.7/
   = info: rad explain RAD20033


### EXIT ###
1
### TITLE ###
Migration_V08_GetDefault_ShowsHelpfulError
### INPUT ###

m = {"a": 1}
get_default(m, "b", 0)
### STDERR ###
error[RAD20028]: Undefined identifier 'get_default'
  --> <script>:3:1
  |
2 | m = {"a": 1}
3 | get_default(m, "b", 0)
  | ^^^^^^^^^^^
  |
   = help: did you mean one of 'get_args', 'get_env', 'get_path'?
   = info: rad explain RAD20028


### EXIT ###
1
### TITLE ###
Migration_V09_GetStashDir_ShowsHelpfulError
### INPUT ###

get_stash_dir()
### STDERR ###
error[RAD20028]: Undefined identifier 'get_stash_dir'
  --> <script>:2:1
  |
1 |
2 | get_stash_dir()
  | ^^^^^^^^^^^^^
  |
   = help: did you mean one of 'get_stash_path', 'get_path', 'load_stash_file'?
   = info: rad explain RAD20028


### EXIT ###
1
### TITLE ###
Migration_V08_GetDefault_Ufcs_ShowsHelpfulError
### INPUT ###

m = {"a": 1}
m.get_default("b", 0)
### STDERR ###
error[RAD20028]: Undefined identifier 'get_default'
  --> <script>:3:3
  |
2 | m = {"a": 1}
3 | m.get_default("b", 0)
  |   ^^^^^^^^^^^
  |
   = help: did you mean one of 'get_args', 'get_env', 'get_path'?
   = info: rad explain RAD20028


### EXIT ###
1
